# autenticami.github.io

./: .gitignore  404.html  CNAME  README.md  Taskfile.yml  autenticami.code-workspace  hatch.toml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
.nitroci/: workspace.yml
access-management/policies/: index.html
accounts/accounts/: index.html
accounts/identities/identities/: index.html
accounts/identities/roles/: index.html
accounts/identities/users-groups/: index.html
accounts/projects/actions/: index.html
accounts/projects/project-domains/: index.html
accounts/projects/projects/: index.html
accounts/projects/resources/: index.html
agents/: index.html
agents/pdp-agent/: index.html
concepts/: index.html
console-endpoints/console/: index.html
console-endpoints/endpoints/: index.html
docs/: architecture-components.md  concepts.md  getting-started.md  index.md  references.md
docs/.overrides/partials/: copyright.html
docs/access-management/: policies.md
docs/accounts/: account.md  accounts.md  index.md
docs/accounts/access-management/: permissions-policies.md
docs/accounts/applications/: actions.md  applications.md  applicative-hierarchies.md  domains.md  resources.md
docs/accounts/apps-resources/: apps-resources.md
docs/agents/: index.md  pdp-agent.md  pdp.md
docs/authenticate/: sso.md
docs/console-endpoints/: endpoints.md
docs/endpoints/: index.md
docs/pep/: index.md
getting-started/: index.html
pep/: index.html
search/: search_index.json
theme/: main.html
(+51 files in other folders)
